--- a/Panel/Panel.csproj
+++ b/Panel/Panel.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Abp.EntityFrameworkCore" Version="3.4.0" />
+    <PackageReference Include="AutoMapper" Version="6.2.2" />
     <PackageReference Include="EntityFrameworkCore.SqlServerCompact40" Version="2.0.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.0.1" />
